# humanized-selenium-scraper

./: .gitignore  ARCHIVE.md  HumanizedSeleniumScraper.py  Makefile  README.md  SECURITY.md  example_search_spec.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CODE_INSPECTION.md
humanized_selenium_scraper/: __init__.py  cli.py  config.py  driver.py  exceptions.py  extract_selenium.py  extract_text.py  human.py  io.py  logging_utils.py  relevance.py  scraper.py  selenium_ops.py  spec.py  url_filter.py
tests/: test_cli_run.py  test_config.py  test_driver.py  test_extract_text.py  test_fix_verification.py  test_io.py  test_io_edge_cases.py  test_logging_utils.py  test_relevance.py  test_spec.py  test_spec_toml.py  test_url_filter.py
